--- a/DotnetAppMetricsPrototype/appsettings.json
+++ b/DotnetAppMetricsPrototype/appsettings.json
@@ -13,7 +13,13 @@
     "Database": "AppMetrics",
     "CreateDataBaseIfNotExists": true,
     "Env": "local",
-    "Interval": 5
+    "Interval": 5,
+    "UserNameEnvironmentVariable": "INFLUXDB_USERNAME",
+    "PasswordEnvironmentVariable": "INFLUXDB_PASSWORD",
+    "Tags": {
+      "App": "dotnet_app_metrics_prototype_api",
+      "Database": "AppMetrics"
+    }
   },
   "AllowedHosts": "*"
 }
